Adding text shadow to top-banner

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
  	text-align: center;
  	vertical-align: center;
 
- 	text-shadow: 1px 1px #ffffff;
- 	/*text-shadow: 2px 2px #000000;*/
-	
+	text-shadow: 0.5px 0.5px #ffffff, 1px 1px #000000;	
 
 
  	font-size: 300%;
