--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="icon" type="image/png" href="baby.png">
+	<link rel="icon" type="image/png" href="Long.png">
 
 	<title>&#x1f476; 朗朗—生日快樂 &#x1f476;</title>
 
