Paddings for out-linking divs

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 	text-align: center;
 	border-style: solid;
 	border-width: 3px;
+	padding: 5px;
 
     animation-name: swing;
     animation-duration: 10s;
@@ -103,6 +104,7 @@
 	text-align: center;
 	border-style: solid;
 	border-width: 3px;
+	padding: 5px;
 
     animation-name: swing;
     animation-duration: 11s;
@@ -119,6 +121,7 @@
 	border-style: solid;
 	border-width: 3px;
 	text-shadow: 0.5px 0.5px #ffffff, 1px 1px #000000;
+	padding: 5px;
 
     animation-name: swing;
     animation-duration: 12s;
