--- a/index_150815.html
+++ b/index_150815.html
@@ -384,20 +384,24 @@ var ranNamedColor;
 
 function appSelector(){
 	clickCount += 1 ;
-if(clickCount < 1)
-	{
+
+	if(clickCount < 7){
+		changeTextColor();
+	}else{if(clickCount < 10){
+		document.getElementById("top-banner").innerHTML = "&#x1F381;<br>有禮物！？" ; 
+		changeTextColor();
+	}else{if(clickCount < 11){
 		document.getElementById("top-banner").style.fontSize  = "250%" ;
 		document.getElementById("top-banner").innerHTML = "&#x1f4d6;<br>一齊嚟學動物、顏色、英文！" ;
 		changeTextColor(); 
-	}else
-	{
-		document.getElementById("top-banner").style.display = "none" ; 
-		changeTextColor();
-		showAnimals();
+		}else{
+			document.getElementById("top-banner").style.display = "none" ; 
+			changeTextColor();
+			showAnimals();
+			}
+		}
 	}
 }
-	
-
 
 function changeTextColor(){
 //	 console.log("Inside changeTextColor(). You have clicked " + clickCount + " times.") ;
@@ -453,9 +457,9 @@ function colorChineseTranslate(){
 </head>
 <body>
 		<div id="top-banner" onclick="appSelector()">
-		
-		
-		&#x1f4d6;<br>一齊嚟學動物、顏色、英文！
+		&#x1f382;
+		<br>
+		&#x1f476; 朗朗—生日快樂 &#x1f476;	
 		</div>
 
 		<div id="animal" onclick="appSelector()">
