Change index.html title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<link rel="icon" type="image/png" href="Long.png">
 
-	<title>&#x1f476; 朗朗—生日快樂 &#x1f476;</title>
+	<title>&#x1F414; 一齊嚟學動物、顏色、英文！ &#x1F40D;</title>
 
 <style>
  html {
