style and favicon

--- a/index_pre180815.html
+++ b/index_pre180815.html
@@ -4,14 +4,18 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="shortcut icon" type="image/x-icon" href="/icons/favicon.ico">
-	<link rel="stylesheet" href="style.css">
+	<link rel="icon" type="image/png" href="Long.png">
 
-
-
-	<title>一齊嚟學動物、顏色、英文！</title>
+	<title>&#x1F414; 一齊嚟學動物、顏色、英文！ &#x1F40D;</title>
 
 <style>
+ html {
+ 	height: 95%;
+ }
+
+ body {
+    height: 100%;
+ }
 
  #top-banner {
  	width: 100%;
@@ -448,7 +452,6 @@ function colorChineseTranslate(){
 
 </head>
 <body>
-	<div id="outerContainer">
 		<div id="top-banner" onclick="appSelector()">
 		
 		
@@ -466,7 +469,5 @@ function colorChineseTranslate(){
 
 		<div id="colorChineseTranslate" onclick="colorChineseTranslate()">
 		</div>
-	</div>
-	<script src="js.js"></script>
 </body>
 </html>
